Small updates to template preamble, example pages

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,11 +1,10 @@
-\section{Appendix}
+\sectionmark{Appendix}
+\phantomsection
+\section*{Appendix}
+\addcontentsline{toc}{section}{\hspace{\tocsecnumwidth}Appendix}
 
 \setsecnumformat{Appendix \csname the#1\endcsname:\ }
 \renewcommand{\thesubsection}{\Alph{subsection}}
 \renewcommand{\thefigure}{\Alph{subsection}.\arabic{figure}}
-
-\subsection{Appendix Item}
-
-\clearpage
 
 \subsection{Appendix Item}
