Fix error in command capitalisation

--- a/changelog.tex
+++ b/changelog.tex
@@ -4,7 +4,7 @@
   \centerline{\begin{tabularx}{\headwidth}{lll}
   date & changes made & made by \\
   \midrule
-  \dtmdisplaydate{2025}{03}{11}{-1} & create initial document & jim bob\\
+  \DTMdisplaydate{2025}{03}{11}{-1} & create initial document & jim bob\\
   \midrule
   \end{tabularx}}
   \end{table}
